fix alignment of name

--- a/app/ui/app.css
+++ b/app/ui/app.css
@@ -73,3 +73,7 @@
 .lnk{
   color: #98E357;
 }
+
+.name {
+  margin-right:5px;
+}
